@@ -24,7 +24,8 @@
 librtdebug is an Open Source development effort with the code base and design
 provided by the following people:
 
-Jens Langner	<Jens.Langner@light-speed.de>
+Jens Maus <mail@jens-maus.de>
+Thore Boeckelmann <tboeckel@gmx.de>
 
 The development of librtdebug is thankfully hosted by SourceForge
 http://www.sourceforge.net/
